# voicevox_e2k

./: .gitmodules  CONTRIBUTING.md  MAINTENANCE.md  README.md
.github/workflows/: build_and_deploy_infer.yml  build_and_release_infer.yml  release_infer.yml  test_dataset.yml  test_infer.yml  test_train.yml
dataset/: .gitignore  .gitmodules  LICENSE  README.md  biome.jsonc  config.example.yml  config.schema.yml  config.test.yml  package.json  pnpm-lock.yaml  tsconfig.json
dataset/src/: config.ts  main.ts  random.ts  utils.ts
dataset/src/inference/: dummy.ts  gemini.ts  index.ts  openai.ts
dataset/src/inference/common/: llm.ts
dataset/src/source/: allShortWords.ts  cmudict.ts  index.ts
dataset/src/tools/: generateConfigSchema.ts  mergeDatasets.ts
infer/: .gitignore  .gitmodules  Cargo.toml  MEMO.md  README.md  Taskfile.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
infer/.github/actions/setup-environment/: action.yml
infer/.github/workflows/: check.yml  deploy.yml
infer/crates/e2k-js/: Cargo.toml  Taskfile.yml  pnpm-lock.yaml
infer/crates/e2k-js/example/: index.html  package.json  pnpm-lock.yaml
infer/crates/e2k-js/example/src/: App.vue  style.css
infer/crates/e2k-js/js/: .gitignore  README.md  biome.json  build.ts  package.json  pnpm-lock.yaml  prepareBuild.ts  tsconfig.json  tsconfig.lib.json  tsconfig.misc.json
infer/crates/e2k-js/js/src/: index.ts  sync.ts
infer/crates/e2k-js/js/src/sync/: c2k.ts  p2k.ts  runtime.ts
infer/crates/e2k-js/js/tests/: index.ts  sync.ts
infer/crates/e2k-js/src/: lib.rs
infer/crates/e2k-py/: .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE.md  README.md  Taskfile.yml  e2k_rs.pyi  pyproject.toml  test_main.py  voicevox_e2k.pyi
infer/crates/e2k-py/src/: lib.rs
infer/crates/e2k-rs/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  about.hbs  about.hbs.md  about.toml  build.rs
infer/crates/e2k-rs/benches/: benchmark.rs
infer/crates/e2k-rs/examples/: repl.rs
infer/crates/e2k-rs/src/: constants.rs  inference.rs  layers.rs  lib.rs  model.rs  models.rs
infer/crates/e2k-rs/tasks/: .gitignore  generate_constants.py  generate_models.py  plot_benchmark.py  pyproject.toml  test_benchmark.py
infer/crates/e2k-rs/tests/: test_main.rs
infer/crates/kanalizer-py/: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  kanalizer.pyi  pyproject.toml  test_main.py
infer/crates/kanalizer-py/python/kanalizer/: __init__.py  _error.py  _rust.pyi
infer/crates/kanalizer-py/src/: converter.rs  lib.rs
infer/crates/kanalizer-rs/: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
infer/crates/kanalizer-rs/benches/: benchmark.rs
infer/crates/kanalizer-rs/examples/: repl.rs
infer/crates/kanalizer-rs/src/: constants.rs  error.rs  inference.rs  layers.rs  lib.rs
infer/crates/kanalizer-rs/tests/: test_main.rs
infer/tools/: README.md  about.hbs.md  about.toml  build_e2k_py.py  build_e2k_py_docker.sh  build_kanalizer_py.py  build_kanalizer_py_docker.sh  common.py  generate_constants.py  paths.py  pyproject.toml  replace_version.py
tools/: build_e2k_py.ts  package.json  pnpm-lock.yaml
train/: .gitignore  README.md  Taskfile.yml  benchmark.py  constants.py  eval.py  export.py  extract.py  merge.py  pyproject.toml  train.py
train/config/: dummy.yml  example.yml  test.yml
train/datasets/: dummy_dataset.jsonl  dummy_dataset_eval.jsonl
train/src/: benchmark.py  config.py  constants.py  eval.py  evaluator.py  export.py  infer.py  merge.py  setup_eval.py  train.py
train/src/e2k/: __init__.py  constants.py  inference.py
