[project]
name = "e2k"
version = "0.2.3"
description = "A tool for automatic English to Katakana conversion"
readme = "README.md"
authors = [{ name = "Patchethium", email = "asguftuikh@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.0,<3.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "build>=1.2.2.post1",
    "g2p-en>=2.1.0",
    "safetensors>=0.5.2",
    "tensorboard>=2.18.0",
    "torch>=2.6.0",
    "torcheval>=0.0.7",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
e2k = ["models/*.npz"]
