[project]
name = "kanalizer-train"
readme = "README.md"
authors = [{ name = "VOICEVOX", email = "voicevox.official@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "g2p-en>=2.1.0",
  "numpy>=1.0,<3.0",
  "requests>=2.32.3",
  "ruff>=0.10.0",
  "safetensors>=0.5.2",
  "tensorboard>=2.18.0",
  "tqdm>=4.67.1",
  "zipfile-deflate64>=0.2.0",
  "torch==2.5.0",
  "torcheval>=0.0.7",
  "pyyaml>=6.0.2",
  "schedulefree>=1.4.1",
]
dynamic = ["version"]
