[package]
name = "e2k-js"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
e2k = { path = "../e2k-rs", default-features = false }
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.217", features = ["derive"] }
brotli-decompressor = "4.0.2"
