[package]
name = "e2k-py"
version = "0.1.0"
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "voicevox_e2k"
crate-type = ["cdylib"]

[features]
default = []
blas = ["e2k/blas", "dep:blas-src", "dep:openblas-src"]

[dependencies]
e2k = { path = "../e2k-rs" }
pyo3 = { version = "0.24.0", features = ["extension-module"] }
blas-src = { version = "0.10", features = ["openblas"], optional = true }
openblas-src = { version = "0.10", features = [
  "cblas",
  "system",
], optional = true }
