[package]
name = "e2k-py"
version.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "voicevox_e2k"
crate-type = ["cdylib"]

[dependencies]
e2k = { path = "../e2k-rs" }
pyo3 = { version = "0.24.0", features = ["extension-module", "abi3-py39"] }
