[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "voicevox_e2k"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
    "pyright>=1.1.398",
]

[dependency-groups]
dev = ["maturin>=1.8.2", "pytest>=8.3.5", "ruff>=0.11.0"]
