[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.uv]
# uvではe2kをビルドできないので無効化
package = false

[project]
name = "voicevox_e2k"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = []

[dependency-groups]
dev = ["maturin>=1.8.2", "pyright>=1.1.398", "pytest>=8.3.5", "ruff>=0.11.0"]
