[package]
name = "e2k"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["compress_model"]

getrandom_on_wasm32_unknown = ["dep:rand", "getrandom/wasm_js"]
compress_model = ["dep:brotli-decompressor"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
duplicate = "2.0.0"
educe = "0.6.0"
itertools = "0.14.0"
ndarray = "0.16.1"
num-traits = "0.2.19"
rand = { version = "0.9.0", optional = true }
getrandom = { version = "0.3.1", optional = true }
safetensors = "0.4.5"
ndarray-safetensors = "0.2.2"
brotli-decompressor = { version = "4.0.2", optional = true }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
rand = "0.9.0"

[dev-dependencies]
criterion = "0.5.1"
dialoguer = "0.11.0"
