[package]
name = "kanalizer-py"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[lib]
name = "kanalizer"
crate-type = ["cdylib"]

[dependencies]
kanalizer = { path = "../kanalizer-rs" }
pyo3 = { version = "0.24.0", features = ["extension-module", "abi3-py39"] }
strum = { version = "0.27.1", features = ["derive"] }
