[project]
name = "tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brotli>=1.1.0",
    "e2k>=0.3.0",
    "safetensors>=0.5.2",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.0",
    "pytest>=8.3.4",
    "pytest-benchmark>=5.1.0",
]
